@@ -4,12 +4,14 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import com.intellias.intellistart.interviewplanning.exceptions.BookingIsAlreadyExistsException;
-import com.intellias.intellistart.interviewplanning.exceptions.ValidationException;
 import com.intellias.intellistart.interviewplanning.exceptions.SlotNotFoundException;
+import com.intellias.intellistart.interviewplanning.exceptions.ValidationException;
 import com.intellias.intellistart.interviewplanning.model.Booking;
+import com.intellias.intellistart.interviewplanning.model.BookingLimit;
 import com.intellias.intellistart.interviewplanning.model.InterviewDayOfWeek;
 import com.intellias.intellistart.interviewplanning.model.slot.CandidateTimeSlot;
 import com.intellias.intellistart.interviewplanning.model.slot.InterviewerTimeSlot;
+import com.intellias.intellistart.interviewplanning.repository.BookingLimitRepository;
 import com.intellias.intellistart.interviewplanning.repository.BookingRepository;
 import com.intellias.intellistart.interviewplanning.repository.CandidateTimeSlotRepository;
 import com.intellias.intellistart.interviewplanning.repository.InterviewerTimeSlotRepository;
@@ -17,6 +19,7 @@ import com.intellias.intellistart.interviewplanning.service.dto.BookingDto;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.BeforeEach;
@@ -26,6 +29,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
+import org.mockito.ArgumentMatchers;
 import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.Mockito;
@@ -38,6 +42,9 @@ public class BookingServiceTest {
   private static final int DESCRIPTION_LENGTH = 35;
   private static final BookingDto BOOKING_DTO = generateBookingDto();
   private static final InterviewerTimeSlot INTERVIEWER_TIME_SLOT = generateInterviewerSlot();
+  private static final InterviewerTimeSlot INTERVIEWER_TIME_SLOT_WITH_BOOKINGS =
+      generateInterviewerTimeSlotWithTwoBookings();
+  private static final BookingLimit BOOKING_LIMIT = generateBookingLimit();
   private static final CandidateTimeSlot CANDIDATE_TIME_SLOT = generateCandidateSlot();
   private static final Booking BOOKING = generateBooking();
 
@@ -45,6 +52,8 @@ public class BookingServiceTest {
   private BookingRepository bookingRepository;
   @Mock
   private InterviewerTimeSlotRepository interviewerTimeSlotRepository;
+  @Mock
+  BookingLimitRepository bookingLimitRepository;
   @Mock
   private CandidateTimeSlotRepository candidateTimeSlotRepository;
   @Mock
@@ -57,9 +66,9 @@ public class BookingServiceTest {
 
   @BeforeEach
   public void setUp() {
-    bookingService = new BookingService(
-        SUBJECT_LENGTH, DESCRIPTION_LENGTH, bookingRepository, interviewerTimeSlotRepository,
-        candidateTimeSlotRepository, timeSlotValidationService);
+    bookingService = new BookingService(SUBJECT_LENGTH, DESCRIPTION_LENGTH, bookingRepository,
+        interviewerTimeSlotRepository, candidateTimeSlotRepository, timeSlotValidationService,
+        bookingLimitRepository);
   }
 
   @Test
@@ -68,11 +77,12 @@ public class BookingServiceTest {
         .thenReturn(Optional.of(INTERVIEWER_TIME_SLOT));
     Mockito.when(candidateTimeSlotRepository.findById(1L))
         .thenReturn(Optional.of(CANDIDATE_TIME_SLOT));
+    Mockito.when(bookingLimitRepository.findByUser(ArgumentMatchers.any()))
+        .thenReturn(Optional.empty());
 
     bookingService.createBooking(BOOKING_DTO);
 
-    Mockito.verify(bookingRepository, Mockito.times(1))
-        .save(bookingArgumentCaptor.capture());
+    Mockito.verify(bookingRepository, Mockito.times(1)).save(bookingArgumentCaptor.capture());
     Mockito.verify(timeSlotValidationService, Mockito.times(1))
         .validateBookingTimeSlotBoundaries(BOOKING_DTO.getStartTime(), BOOKING_DTO.getEndTime());
 
@@ -89,8 +99,7 @@ public class BookingServiceTest {
   @Test
   public void createBooking_When_InterviewerSlotNotFound_Should_ThrowException() {
     Mockito.when(interviewerTimeSlotRepository.findById(1L)).thenReturn(Optional.empty());
-    assertThrows(SlotNotFoundException.class,
-        () -> bookingService.createBooking(BOOKING_DTO));
+    assertThrows(SlotNotFoundException.class, () -> bookingService.createBooking(BOOKING_DTO));
   }
 
   @Test
@@ -98,8 +107,9 @@ public class BookingServiceTest {
     Mockito.when(interviewerTimeSlotRepository.findById(1L))
         .thenReturn(Optional.of(INTERVIEWER_TIME_SLOT));
     Mockito.when(candidateTimeSlotRepository.findById(1L)).thenReturn(Optional.empty());
-    assertThrows(SlotNotFoundException.class,
-        () -> bookingService.createBooking(BOOKING_DTO));
+    Mockito.when(bookingLimitRepository.findByUser(ArgumentMatchers.any()))
+        .thenReturn(Optional.empty());
+    assertThrows(SlotNotFoundException.class, () -> bookingService.createBooking(BOOKING_DTO));
   }
 
   @Test
@@ -111,10 +121,10 @@ public class BookingServiceTest {
         .thenReturn(Optional.of(interviewerTimeSlot));
     Mockito.when(candidateTimeSlotRepository.findById(1L))
         .thenReturn(Optional.of(CANDIDATE_TIME_SLOT));
+    Mockito.when(bookingLimitRepository.findByUser(ArgumentMatchers.any()))
+        .thenReturn(Optional.empty());
 
-
-    BookingIsAlreadyExistsException exception = assertThrows(
-        BookingIsAlreadyExistsException.class,
+    BookingIsAlreadyExistsException exception = assertThrows(BookingIsAlreadyExistsException.class,
         () -> bookingService.createBooking(BOOKING_DTO));
 
     assertEquals("booking is already exists for interviewer slot", exception.getMessage());
@@ -129,9 +139,10 @@ public class BookingServiceTest {
         .thenReturn(Optional.of(INTERVIEWER_TIME_SLOT));
     Mockito.when(candidateTimeSlotRepository.findById(1L))
         .thenReturn(Optional.of(candidateTimeSlot));
+    Mockito.when(bookingLimitRepository.findByUser(ArgumentMatchers.any()))
+        .thenReturn(Optional.empty());
 
-    BookingIsAlreadyExistsException exception = assertThrows(
-        BookingIsAlreadyExistsException.class,
+    BookingIsAlreadyExistsException exception = assertThrows(BookingIsAlreadyExistsException.class,
         () -> bookingService.createBooking(BOOKING_DTO));
 
     assertEquals("booking is already exists for candidate slot", exception.getMessage());
@@ -139,7 +150,8 @@ public class BookingServiceTest {
 
   @ParameterizedTest
   @MethodSource("outOfRangeTimeValues")
-  public void createBooking_When_TimeIsNotInInterviewerSlotRange_Should_ThrowException(LocalTime from, LocalTime to) {
+  public void createBooking_When_TimeIsNotInInterviewerSlotRange_Should_ThrowException(
+      LocalTime from, LocalTime to) {
     BookingDto bookingDto = generateBookingDto();
     bookingDto.setStartTime(from);
     bookingDto.setEndTime(to);
@@ -148,60 +160,63 @@ public class BookingServiceTest {
         .thenReturn(Optional.of(INTERVIEWER_TIME_SLOT));
     Mockito.when(candidateTimeSlotRepository.findById(1L))
         .thenReturn(Optional.of(CANDIDATE_TIME_SLOT));
+    Mockito.when(bookingLimitRepository.findByUser(ArgumentMatchers.any()))
+        .thenReturn(Optional.empty());
 
-    assertThrows(ValidationException.class,
-        () -> bookingService.createBooking(bookingDto));
+    assertThrows(ValidationException.class, () -> bookingService.createBooking(bookingDto));
 
   }
 
+  @Test
+  public void createBooking_When_BookingLimit_Equals_Current_Count_OfBookings() {
+    Mockito.when(interviewerTimeSlotRepository.findById(1L))
+        .thenReturn(Optional.of(INTERVIEWER_TIME_SLOT_WITH_BOOKINGS));
+    Mockito.when(bookingLimitRepository.findByUser(ArgumentMatchers.any()))
+        .thenReturn(Optional.ofNullable(BOOKING_LIMIT));
+
+    assertThrows(ValidationException.class, ()-> bookingService.createBooking(BOOKING_DTO));
+  }
+
   private static Stream<Arguments> outOfRangeTimeValues() {
-    return Stream.of(
-        Arguments.of(LocalTime.of(12, 0), LocalTime.of(13, 30)),
+    return Stream.of(Arguments.of(LocalTime.of(12, 0), LocalTime.of(13, 30)),
         Arguments.of(LocalTime.of(10, 30), LocalTime.of(12, 0)),
-        Arguments.of(LocalTime.of(9, 30), LocalTime.of(11, 0))
-    );
+        Arguments.of(LocalTime.of(9, 30), LocalTime.of(11, 0)));
   }
 
 
   private static BookingDto generateBookingDto() {
-    return BookingDto.builder()
-        .startTime(LocalTime.of(10, 0))
-        .endTime(LocalTime.of(11, 30))
-        .candidateTimeSlotId(1L)
-        .interviewerTimeSlotId(1L)
-        .subject("Interview")
-        .description("Interview for candidate")
-        .build();
+    return BookingDto.builder().startTime(LocalTime.of(10, 0)).endTime(LocalTime.of(11, 30))
+        .candidateTimeSlotId(1L).interviewerTimeSlotId(1L).subject("Interview")
+        .description("Interview for candidate").build();
   }
 
   private static InterviewerTimeSlot generateInterviewerSlot() {
-    return InterviewerTimeSlot.builder()
-        .from(LocalTime.of(10, 0))
-        .to(LocalTime.of(11, 30))
-        .dayOfWeek(InterviewDayOfWeek.MONDAY)
-        .weekNum(15)
-        .bookings(Collections.emptyList())
-        .build();
+    return InterviewerTimeSlot.builder().from(LocalTime.of(10, 0)).to(LocalTime.of(11, 30))
+        .dayOfWeek(InterviewDayOfWeek.MONDAY).weekNum(15).bookings(Collections.emptyList()).build();
+  }
+
+  private static InterviewerTimeSlot generateInterviewerTimeSlotWithTwoBookings() {
+    return InterviewerTimeSlot.builder().from(LocalTime.of(10, 0)).to(LocalTime.of(11, 30))
+        .dayOfWeek(InterviewDayOfWeek.MONDAY).weekNum(15)
+        .bookings(List.of(generateBooking(), generateBooking())).build();
   }
 
   private static CandidateTimeSlot generateCandidateSlot() {
-    return CandidateTimeSlot.builder()
-        .date(LocalDate.of(2022, 10, 25))
-        .from(LocalTime.of(10, 0))
-        .to(LocalTime.of(11, 30))
-        .bookings(Collections.emptyList())
-        .build();
+    return CandidateTimeSlot.builder().date(LocalDate.of(2022, 10, 25)).from(LocalTime.of(10, 0))
+        .to(LocalTime.of(11, 30)).bookings(Collections.emptyList()).build();
   }
 
   private static Booking generateBooking() {
-    return Booking.builder()
+    return Booking.builder().id(1L).startTime(LocalTime.of(10, 0)).endTime(LocalTime.of(11, 30))
+        .candidateTimeSlot(CANDIDATE_TIME_SLOT).interviewerTimeSlot(INTERVIEWER_TIME_SLOT)
+        .subject("Interview").description("Interview for candidate").build();
+  }
+
+  private static BookingLimit generateBookingLimit() {
+    return BookingLimit.builder()
+        .bookingLimit(2)
+        .user(generateInterviewerTimeSlotWithTwoBookings().getUser())
         .id(1L)
-        .startTime(LocalTime.of(10, 0))
-        .endTime(LocalTime.of(11, 30))
-        .candidateTimeSlot(CANDIDATE_TIME_SLOT)
-        .interviewerTimeSlot(INTERVIEWER_TIME_SLOT)
-        .subject("Interview")
-        .description("Interview for candidate")
         .build();
   }
 
